2004-11-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (%file_seen): Rename as ...
	(%file_added): ... this, and move it close to add_file(), the only
	function that uses it.

	* aclocal.in (version): Remove initial blank line and reproduce
	the layout of automake --version.  From Art Haas.

	* aclocal.in (%file_type, FT_USER, FT_AUTOMAKE_SYSTEM): New variables.
	(scan_m4_dirs): New function, extracted from ...
	(scan_m4_files): ... here.  Call scan_m4_files three times, for each
	FT_ constant.
	(scan_file): Take a file type argument to update %file_type.
	(write_aclocal): Do not m4_include files that are not of type FT_USER.
	* tests/dirlist.test: Make sure m4_include is not used for --acdir
	files.

	* tests/defs.in (testaclocaldir): New variable.
	* tests/aclocal.test: Use it to fix the test.  Report from
	Patrick Welche.

2004-11-10  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (AM_PATH_PYTHON): Fix the invocation of
	AC_PATH_PROGS to correctly define PYTHON as `:' when no interpreter
	is found (this worked correctly only when a minimal version was
	passed to AM_PATH_PYTHON).  Report from Stepan Kasal.
	(_AM_PYTHON_INTERPRETER_LIST): Define using m4_define_default,
	so we can easily override the list from the test suite.
	* tests/python11.test: New file.
	* tests/Makefile.am (TESTS): Add python11.test.

	* doc/automake.texi (Libtool Modules): Make clearer that -module
	should appear explicitly in _LDFLAGS.

2004-11-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in (parse_arguments): Correctly recognize --print-ac-dir.
	* tests/aclocal.test: Check --print-ac-dir and a unknown option.

	* aclocal.in (parse_arguments): Fix detection of unexisting default
	$(datadir)/aclocal.  Report from Akim.

2004-11-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* aclocal.in ($acdir): Rename as ...
	(@system_includes): ... this.
	(@user_includes, @automake_includes): New variables.
	($default_acdir, $default_dirlist): Remove.