@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2004  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -71,9 +71,11 @@ cat >sub/scriptok.sh <<EOF
 echo "Which version? Which usage?"
 EOF
 
+# Not only does this script not support --help/--version, but
+# it will also hang when run without input.
 cat >sub/scriptnok.sh <<EOF
 #!/bin/sh
-:
+cat
 EOF
 
 chmod +x sub/scriptok.sh
