@@ -1,3 +1,12 @@
+2004-11-21  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/progs.am (installcheck-%DIR%PROGRAMS): Run programs with
+	/dev/null as input, so we do not hang on programs that read their
+	input without supporting --help and --version.
+	* lib/am/scripts.am (installcheck-%DIR%SCRIPTS): Likewise for scripts.
+	* tests/gnits2.test: Change scriptnok.sh to cat its input.
+	Report and fix from James Youngman.
+
 2004-11-17  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* aclocal.in (%file_seen): Rename as ...
